<resources>
    <string name="gcm_project_number">680009696864</string>
    <string name="facebook_app_id">840535009393707</string>
    <string name="support_email">support@jiggieapp.com</string>
    <string name="appsflyer_devkey">D4Uux6HSu3aYjNHkCHsTiC</string>
    <string name="mixpanel_token">39ae6be779ffea77ea2b2a898305f560</string>
    <string name="vt_client_key">VT-client-gJRBbRZC0t_-JXUD</string>
    <string name="broadcast_notification">jiggie.broadcast.notification</string>
    <string name="broadcast_social">jiggie.broadcast.social</string>
    <string name="broadcast_social_chat">jiggie.broadcast.social.chat</string>
    <string name="error_could_not_connect_server">Could not connect to server</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_3dsecure">3D secure authentication failed, make sure your credit card is valid</string>
    <string name="tag_location">TAG LOCATION</string>
    <string name="error_loc_failed">Failed get location</string>
    <string name="error_loc_suspended">Suspended get location</string>
    <string name="facebook_permission_required">To get the full benefits of Jiggie\n please accept the following Facebook permission(s): Birthday, Email, Photos, Location, About_me</string>
    <string name="welcome_description">Welcome to Jiggie, Jiggie shows you great\nevents near you - let\'s get going.</string>
    <string name="we_dont_post">We don\'t post anything to Facebook</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="have_account">I have a Jiggie account</string>
    <string name="see_whats_going">See whats going on&#8230;</string>
    <string name="browse_the_latest">Browse the latest events in Jakarta</string>
    <string name="check_other_guest">Check out other guests who like the same events you do</string>
    <string name="connect_with_other">Connect with other fun loving people and make new friends</string>
    <string name="chat_with_new_friends">Chat with your new friends and make plans to meet up</string>
    <string name="rate_app">Rate Jiggie</string>
    <string name="rate_app_desc">If you enjoy using Jiggie, please take a moment to rate it. \n\nThanks for your support!</string>
    <string name="guest_interested_title">GUESTS INTERESTED</string>
    <string name="rate">Rate</string>
    <string name="never">Never</string>
    <string name="later">Later</string>
    <string name="events">Events</string>
    <string name="chat">Chat</string>
    <string name="active">Active</string>
    <string name="social">Social</string>
    <string name="more">More</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="distance">Distance</string>
    <string name="distance_sort">Sort guests by their distance&#8230;</string>
    <string name="age">Age</string>
    <string name="age_sort">Sort guests by their age&#8230;</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="profile">Profile</string>
    <string name="invite">Invite Friends</string>
    <string name="get_free_credit">Get Free Credits</string>
    <string name="order_list">Order list</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="logout">Log out</string>
    <string name="credit_balance">Credit Balance</string>
    <string name="user_viewing">%1$s is also interested in</string>
    <string name="location_viewing">%1$s at %2$s</string>
    <string name="connect_with">Connect with %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dash"> - </string>
    <string name="recent">Recent</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading</string>
    <string name="description">Description</string>
    <string name="connect">Connect</string>
    <string name="sent">Sent</string>
    <string name="interested">Interested</string>
    <string name="event_interested_guests">See who\'s checked out this event</string>
    <string name="user_age">%1$s, %2$s</string>
    <string name="about">About</string>
    <string name="about_you">About You</string>
    <string name="save">Save</string>
    <string name="confirmation">Are you sure?</string>
    <string name="notification">Notification</string>
    <string name="gender">Gender</string>
    <string name="social_feed">Social feed</string>
    <string name="chat_messages">Chat messages</string>
    <string name="chat_setting_description">This changes the notification Jiggie will send you - you don\'t want to miss out</string>
    <string name="im_a">I am a</string>
    <string name="both">Both</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="interested_in">Interested in meeting</string>
    <string name="documents">Documents</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_use">Term of Use</string>
    <string name="share">Share</string>
    <string name="your_location">Your location</string>
    <string name="connected">Connected</string>
    <string name="check_back_later">Check back soon</string>
    <string name="check_back_later_description">Browse some events and your social feed will show members who like the same events.</string>
    <string name="start_chatting">Start chatting</string>
    <string name="make_some_plan">Make some plans for today!</string>
    <string name="socialize">Socialize</string>
    <string name="socialize_description">Turn off if you do not wish to be seen by others</string>
    <string name="socialize_description_off">Turn on if you wish to be seen by others</string>
    <string name="socialize_description_new_off">If you wish not to be seen by others, turn this off</string>
    <string name="socialize_description_new_on">If you wish to be seen by others, turn this on</string>
    <string name="wants_to_go_with">%1$s wants to go with you to</string>
    <string name="interested_question">Interested?</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="event_date_format">%1$s to %2$s</string>
    <string name="summary_created">%1$s - %2$s</string>
    <string name="book_now">Book now</string>
    <string name="external_site">(External site)</string>
    <string name="send">Send</string>
    <string name="user_chat_profile">%1$s\'s profile</string>
    <string name="user_chat_block">Block %1$s</string>
    <string name="block_failed">Failed to block %1$s</string>
    <string name="your_message">Your message&#8230;</string>
    <string name="book_error">Unable to retrieve external site.</string>
    <string name="clear_conversation">Clear conversation</string>
    <string name="clear_conversation_failed">Failed to clear conversation</string>
    <string name="your_experience">Your experience</string>
    <string name="your_experience_description">Pick the type of events you\'ll be into</string>
    <string name="stay_in_the_loop">Stay in the loop</string>
    <string name="stay_in_the_loop_description">For the best experience allow us access</string>
    <string name="dont_miss_invites">Don\'t miss exclusive invites and chat messages from other members</string>
    <string name="notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="find_events">Find events for you</string>
    <string name="find_events_description">For the best experience allow us access</string>
    <string name="location">Location</string>
    <string name="location_description">Stay in the know on most popular events around you</string>
    <string name="no_fullfillment">This event does not have external site</string>
    <string name="call">Call</string>
    <string name="reserve">Reserve now</string>
    <string name="purchase">Purchase table</string>
    <string name="see_all_guests">See all guests</string>
    <string name="wk_event_title">EVENTS</string>
    <string name="wk_match_title">SUGGESTED MATCH</string>
    <string name="wk_request_title">CONNECTION REQUEST</string>
    <string name="wk_chat_title">CHAT</string>
    <string name="wk_event_desc">Scroll through our curated list of the best events in Jakarta. If you see an event you like, tap on it for more details.</string>
    <string name="wk_match_desc">We suggest matches with other guests.\nTap <b>YES</b> if you want to connect with them.\nIf they also Tap <b>YES</b> then a chat starts.</string>
    <string name="wk_request_desc">This card means they want to connect with you.\nTap <b>YES</b> to start chatting right away.</string>
    <string name="wk_chat_desc">When you both tap <b>YES</b> a chat connection begins.\nStart chatting and make plans to go to events together!</string>
    <string name="wk_chat_action">START TYPING</string>
    <string name="wk_match_action">CONNECT</string>
    <string name="wk_request_action">ACCEPT REQUEST</string>
    <string name="title_no_event">No events found</string>
    <string name="msg_no_event">No events found</string>
    <string name="title_dialog_notif">Allow notification?</string>
    <string name="msg_dialog_notif">System will allow your device to receive notification from this app.</string>
    <string name="title_dialog_location">Allow share location?</string>
    <string name="msg_dialog_location">System will allow this app to get information about your phone location.</string>
    <string name="msg_dialog_sett_location">Open Setting to activate GPS</string>
    <plurals name="guest_count">
        <item quantity="one">%1$d Guest</item>
        <item quantity="other">%1$d Guests</item>
    </plurals>
    <string-array name="items_gender">
        <item>@string/man</item>
        <item>@string/woman</item>
    </string-array>
    <string-array name="items_gender_interest">
        <item>Both</item>
        <item>@string/man</item>
        <item>@string/woman</item>
    </string-array>
    <string name="filter_title">Filter</string>
    <string name="choose_one_experience">You have to choose at least one experience</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="upcoming">Upcoming</string>
    <string name="account">Account</string>
    <string name="please_wait">Updating your experiences</string>
    <string name="purchase_ticket">Purchase ticket</string>
    <string name="wait">Please wait</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="standard_error_message">Sorry we\'re having some server issues, please check back in a few minutes</string>
    <string name="socket_timeout_exception">Sorry, your request has been timed out</string>
    <string name="no_one_will_see_your_phone_number">No one will see your phone number on Jiggie.</string>
    <string name="international">International</string>
    <string name="usa">US_United States</string>
    <string name="enter_verification_code">Enter your verification code</string>
    <string name="title_guest">CONTACT DETAIL</string>
    <string name="guest_name">Guest name</string>
    <string name="guest_email">Email</string>
    <string name="guest_62">+62</string>
    <string name="guest_phone">Phone number</string>
    <string name="guest_phone_info">* Please verify your information is correct so we can keep you updated on your order</string>
    <string name="guest_save">SAVE</string>
    <string name="howtp_star">*</string>
    <string name="his_title">Bookings</string>
</resources>