<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >


    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/action_social_filter"
        android:title="@string/filter_title"
        app:showAsAction="never"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/action_invite"
        android:title="@string/invite"
        app:showAsAction="never"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/action_orderlist"
        android:title="@string/his_title"
        app:showAsAction="never"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/action_support"
        android:title="@string/support"
        app:showAsAction="never"
        android:orderInCategory="5"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="6"/>
</menu>