<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:title="@android:string/search_go"
        android:icon="@mipmap/ic_search_white"
        android:id="@+id/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>-->

    <item
        android:id="@+id/action_profile"
        android:title="@string/account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/support"
        app:showAsAction="never" />
</menu>

    <!--
    <item
    android:title="@string/clear_conversation"
    android:id="@+id/action_clear"
    app:showAsAction="never"/>-->
