<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txt_title"
            android:text="@string/title_guest"
            android:layout_alignParentLeft="true"
            android:textColor="@color/purple"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_standard"
            android:textStyle="bold"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txt_cancel"
            android:text="@string/cancel"
            android:layout_alignParentRight="true"
            android:textColor="@color/common_plus_signin_btn_text_dark_disabled"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padding_standard"/>
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rel_title"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guest_name"
        app:met_baseColor="@color/textDarkGray"
        app:met_primaryColor="@color/skyBlue"
        app:met_textColorHint="@color/common_plus_signin_btn_text_light_disabled"
        app:met_errorColor="@android:color/holo_red_light"
        android:layout_below="@id/divider"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/padding_standard"
        android:layout_marginRight="@dimen/padding_standard"
        android:layout_marginTop="@dimen/padding_standard_half"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guest_email"
        android:inputType="textEmailAddress"
        app:met_baseColor="@color/textDarkGray"
        app:met_primaryColor="@color/skyBlue"
        app:met_textColorHint="@color/common_plus_signin_btn_text_light_disabled"
        app:met_errorColor="@android:color/holo_red_light"
        android:layout_below="@id/edt_name"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/padding_standard"
        android:layout_marginRight="@dimen/padding_standard"
        android:layout_marginTop="@dimen/padding_standard_half"/>

    <LinearLayout
        android:id="@+id/lin"
        android:layout_below="@id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/padding_standard"
        android:layout_marginRight="@dimen/padding_standard"
        android:layout_marginTop="@dimen/padding_standard_half">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_62"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guest_62"
            app:met_baseColor="@color/textDarkGray"
            app:met_primaryColor="@color/skyBlue"
            app:met_textColorHint="@color/common_plus_signin_btn_text_light_disabled"
            app:met_errorColor="@android:color/holo_red_light"
            android:layout_below="@id/divider"
            android:textSize="12sp"
            android:layout_marginRight="@dimen/padding_standard_half"
            android:layout_marginTop="@dimen/padding_standard_half"
            android:layout_weight="0.8"
            android:inputType="number"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guest_phone"
            app:met_baseColor="@color/textDarkGray"
            app:met_primaryColor="@color/skyBlue"
            app:met_textColorHint="@color/common_plus_signin_btn_text_light_disabled"
            app:met_errorColor="@android:color/holo_red_light"
            android:layout_below="@id/divider"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/padding_standard_half"
            android:layout_marginRight="@dimen/padding_standard"
            android:layout_marginTop="@dimen/padding_standard_half"
            android:layout_weight="0.2"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin"
        android:layout_marginTop="@dimen/padding_standard"
        android:layout_marginLeft="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/padding_standard"
        android:text="@string/howtp_star"
        android:layout_alignParentLeft="true"
        android:textColor="@color/purple"/>

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin"
        android:layout_toRightOf="@id/txt_star"
        android:layout_marginTop="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/padding_standard"
        android:text="@string/guest_phone_info"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginLeft="3dp"/>

    <RelativeLayout
        android:id="@+id/rel_save"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/blue_selector"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txt_save"
            android:text="@string/guest_save"
            android:layout_centerInParent="true"
            android:textColor="@color/common_plus_signin_btn_text_dark"/>
    </RelativeLayout>

</RelativeLayout>