<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/distance"
        android:textAllCaps="true"/>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="1 Mile"/>

        <TextView
            android:textColor="@android:color/black"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="5 Miles"/>
    </RelativeLayout>

    <SeekBar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:text="@string/distance_sort"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:textAllCaps="true"
        android:text="@string/age"/>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="21"/>

        <TextView
            android:textColor="@android:color/black"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="32"/>
    </RelativeLayout>

    <SeekBar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/age_sort"/>

    <View
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"/>
</LinearLayout>